Included new fat jar #36